--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,3 +47,10 @@ ManualIPAddress=
 [/Script/Engine.AudioSettings]
 DefaultBaseSoundMix=/Game/MyContent/Sounds/SoundMix.SoundMix
 
+[/Script/Engine.RendererSettings]
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+
