--- a/TomTenner.uproject
+++ b/TomTenner.uproject
@@ -1,13 +1,12 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.2",
+	"EngineAssociation": "5.4",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
 		{
-			"Name": "BlockoutToolsPlugin",
-			"Enabled": true,
-			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d337b97aca8947a893526964e179acfd"
+			"Name": "MovieRenderPipeline",
+			"Enabled": true
 		}
 	]
 }
